--- a/index.html
+++ b/index.html
@@ -1,395 +1,44 @@
-﻿<!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Samuel Chambers</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="favicon.ico">
+    <title>ECYFL</title>
+</head>
+<body>
+    
+    <!-- Profile picture-->
+    <img src="assets/logo.png" alt="profile picture" class="logo">
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/portrait.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Samuel Chambers</a></h1>
-					<p>Dog Lover | Soccer Referee/Mentor</p>
-					<p>Mental Health Advocate | Smash Bros Enthusiast</p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#about" class="active">About Me</a></li>
-						<li><a href="#dogs">Dogs</a></li>
-						<li><a href="#soccer">Soccer</a></li>
-						<li><a href="#mentalhealth">Mental Health</a></li>
-						<li><a href="#other">Other Interests</a></li>
-						<li><a href="#resumes">Resumes</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/samueljchambers" class="fa fa-linkedin"></a></li>
-						<li><a href="https://www.instagram.com/sc_dogs" class="fa fa-instagram"></a></li>
-						<li><a href="https://www.facebook.com/scdogwalker" class="fa fa-facebook"></a></li>
-						<li><a href="mailto:samueljchambers@outlook.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="tel:9787120060" class="icon fa-phone"></a></li>
-					</ul>
-				</footer>
-			</section>
+    <!-- Login link-->
+    <a class="login" href="https://www.leagueathletics.com/CPanel/Password.asp?org=ecyfl.org">Login</a></div>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+    <!-- Header text-->
+    <div class="header-text">Home</div>
 
-				<!-- Main -->
-					<div id="main">
+    <!-- Links-->
+        <a href="about.html" class="links">About</a>
+        <a href="registration.html" class="links">Registration</a>
+        <a href="http://www.ecyfl.org/Schedule.asp?org=ecyfl.org" class="links">Schedule</a>
+        <a href="https://www.google.com/maps/dir//Pingree+School,+537+Highland+St,+South+Hamilton,+MA+01982/@42.63862,-70.8831347,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e319ea68324409:0xd077c1afa71b2096!2m2!1d-70.880946!2d42.63862" class="links">Directions</a>
+        <a href="http://www.ecyfl.org/Page.asp?n=159444&org=ECYFL%2EORG" class="links">COVID-19</a>
 
-						<!-- One -->
-							<!-- <section id="about">
-								<div class="container">
-									<header class="major">
-										<h2>Sam Chambers</h2>
-										<p>About Me</p>
-									</header>
-									<p>
-										Hello, and welcome to my webpage! Here, you'll get a feel for my passions as well as my work/personal experience.
-										I will let you know right now that I tend to be long-winded in my writing, so if you're looking for a specific aspect
-										of my life, you can use the notification bar to skip to it.I hope you take the time to get to know me, and if you have
-										any interest in reaching out for any reason, feel free to <a href="#contact">contact me</a>.
-									</p>
-									<p>
-										A little bit about me: I'm a 24 year old man from Danvers, MA. Growing up, I went to public schools and focused on
-										marching band, soccer and basketball. After graduating high school in 2014, I went to UMass Lowell to study computer
-										science. There, I was president of the Super Smash Bros club and I was on the e-board for Active Minds, a mental health
-										advocacy group. I stopped attending after 5 years, once I realized that my lack of passion for my studies killed my
-										motivation for my classes and the pressure and expectations I was putting on myself was unrealistic.
-									</p>
-									<p>
-										I may go back and finish my degree someday, but for now, I'm focusing on other things that are more fulfilling to me,
-										such as <a href="#dogs">working with dogs</a>, <a href="#soccer">refereeing youth soccer/mentoring new referees</a>,
-										and <a href="#mentalhealth">spreading mental health awareness</a>.
-									</p>
-									<p>
-										One major aspect of my life that holds me back is the issues I have in my forearms, wrists and hands. A combination of
-										genetic predisposition, poor posture, and overuse from gaming (specifically Guitar Hero and Super Smash Bros.) have
-										left me with major issues with the muscles, tendons, and nerves. At times, the pain and weakness has made everyday tasks
-										such as driving and using my phone difficult. I recently took a break from my job at the doggy daycare I've been working
-										at to focus on my recovery. From what I understand, it can't be fixed but it can be heavily mitigated if I put in the
-										work to maintain it. I'm currently in physical therapy and am seeing a chiropractor to try to manage the situation.
-									</p>
-								</div>
-							</section> -->
+        <p><a href="https://www.facebook.com/ecyflfutsal" class="socials">Facebook</a></p>
+        <p><a href="https://www.instagram.com/ecyfl/" class="socials">Instagram</a></p>
+        <p><a href="https://ecyfl.org/" class="socials">ecyfl.org</a></p>
 
-						<!-- Two -->
-							<section id="dogs">
-								<div class="container">
-									<div class="features">
-										<article id="dogheader">
-											<div id="dogheaderleft">
-												<img src="images/dogs_scdogs.png" alt="" href="#" width="75%" style="border-radius: 25px;"/>
-											</div>
-											<div id="dogheaderright">
-												<h2>SC Dogs</h2>
-												<ul>
-													<li style="font-size: larger;"><b>Walking</b></li>
-													<li style="font-size: larger;"><b>Training</b></li>
-													<li style="font-size: larger;"><b>Sitting</b></li>
-												</ul>
+    <div class="bottom-text">
+        <p>Contact us at</p>
+        <h3><a class="email" href="mailto:info@ecyfl.org">info@ecyfl.org</h3></a>
+    </div>
 
-												<h4>See rates and services below</h4>
-											</div>
-										</article>
-										<article>
-											<!-- <p>test</p> -->
-											<div class="inner">
-												<p></p>
-												<table>
-													<tr>
-														<td colspan="3" style="font-size: xx-large; text-align: center;"><b>Rates and Services</b></td>
-													</tr>
-													<tr>
-														<td style="font-size: x-large; text-align: center;"><b>Service</b></td style="font-size: xx-large; text-align: center;">
-														<td style="font-size: x-large; text-align: center;"><b>Length</b></td style="font-size: xx-large; text-align: center;">
-														<td style="font-size: x-large; text-align: center;"><b>Cost</b></td style="font-size: xx-large; text-align: center;">
-													</tr>
-													<tr>
-														<td rowspan="3" style="text-align: center;"><a class="trigger_popup_walk">Walk</a></td colspan="2">
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_15wl">15 minutes</a></td style="text-align: center;">
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_15wc">$12+</a></td style="text-align: center; white-space: nowrap;">
-													</tr>
-													<tr>
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_30wl">30 minutes</a></td style="text-align: center; white-space: nowrap;">
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_30wc">$18+</a></td style="text-align: center; white-space: nowrap;">
-													</tr>
-													<tr>
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_60wl">60 minutes</a></td style="text-align: center; white-space: nowrap;">
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_60wc">$25+</a></td style="text-align: center; white-space: nowrap;">
-													</tr>
-													<tr>
-														<td rowspan="2" style="text-align: center; white-space: nowrap;"><a class="trigger_popup_sitting">Sitting</a></td>
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_30sl">30 minutes</a></td style="text-align: center; white-space: nowrap;">
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_30sc">$15+</a></td style="text-align: center; white-space: nowrap;">
-													</tr>
-													<tr>
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_onsl">Overnight</a></td style="text-align: center; white-space: nowrap;">
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_onsc">$50+</a></td>
-													</tr>
-													<tr>
-														<td style="text-align: center; white-space: nowrap;"><a class="trigger_popup_training">Training</a></td style="text-align: center; white-space: nowrap;">
-														<td colspan="2" style="text-align: center; white-space: nowrap;"><a class="trigger_popup_training">Click here for details</a></td>
-													</tr>
-												</table>
-											</div>
-										</article>
-										<article>
-											<!-- Load Facebook SDK for JavaScript -->
-											<div id="fb-root"></div>
-											<script>
-												window.fbAsyncInit = function() {
-												FB.init({
-													xfbml            : true,
-													version          : 'v5.0'
-												});
-												};
-
-												(function(d, s, id) {
-												var js, fjs = d.getElementsByTagName(s)[0];
-												if (d.getElementById(id)) return;
-												js = d.createElement(s); js.id = id;
-												js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-												fjs.parentNode.insertBefore(js, fjs);
-												}(document, 'script', 'facebook-jssdk'));
-											</script>
-
-											<!-- Your customer chat code -->
-											<div class="fb-customerchat"
-												attribution=setup_tool
-												page_id="120773505982921"
-												theme_color="#13cf13"
-												logged_in_greeting="Hi! How can I help you?"
-												logged_out_greeting="Hi! How can I help you?">
-											</div>
-										</article>
-<!-- 									<h3>Why</h3>
-										<p>
-											After deciding not to pursue my degree in computer science, I did some soul-searching to try to find what path I could take
-											to find my purpose in life. The only thing that came to mind was working with animals, specifically dogs. I applied to a few
-											doggy daycares and was hired at one. I learned a lot about dog behavior here and found myself motivated to absorb as much
-											information I could. I decided I wanted to expand my experience in the field, so I started my dog business, SC Dogs.
-										</p> -->
-									</div>
-								</div>
-							</section>
-
-<!-- 							<section id="soccer">
-								<div class="container">
-									<h3>Soccer</h3>
-									<p>I'm always open to talk if you have a reason to contact me! I can be reached via email at <a href="mailto:samueljchambers@outlook.com">samueljchambers@outlook.com</a>, or feel free to check out my <a href="https://www.linkedin.com/in/samueljchambers">LinkedIn profile</a>.</p>
-								</div>
-							</section>
-							
-							<section id="mentalhealth">
-								<div class="container">
-									<h3>Mental Health</h3>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/SUJPN5z_7Tg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>								</div>
-							</section>
-
-							<section id="other">
-								<div class="container">
-									<h3>Personal Interests</h3>
-									<p>Outside of coding, I have a couple of passions I enjoy pursuing in my free time.</p>
-									<div class="features">
-										<article>
-											<a class="image"><img src="images/Referee.jpg" alt="" /><div align="center" class="caption"><i>Sporting our pink uniforms at the Danvers Invitational Tournament, Memorial Day Weekend 2015.</i></div></a>
-											<div class="inner">
-												<h4>Soccer Referee/Fan</h4>
-												<p>For as long as I can remember, soccer has been a significant part of my life. Although my days as a player are over, outside of intramural leagues for my school, I will enjoy my front row season tickets to the New England Revolution!</p>
-												<p>For roughly half my life (9 of my 20 years), I have been a USSF certified soccer referee. Refereeing was my first job, and it has been a great way for me to really learn more about a sport I love, all while teaching me several important communication and cooperation skills along the way.</p>
-											</div>
-										</article>
-										<article>
-											<a class="image"><img src="images/PewFatPound2016.jpg" alt="" /><div align="center" class="caption"><i>Myself with two of my favorite professional Super Smash Bros Melee players, PewPewU and SFAT, this April at Pound 2016, a national tournament held in Virginia featuring just under 1000 entrants.</i></div></a>
-											<div class="inner">
-												<h4>Avid Nintendo Fan</h4>
-												<p>From the age of two, when my older sisters handed me an unplugged Super Nintendo controller while they played Super Mario World, I've been a huge Nintendo fan. I enjoy collecting the systems, and between consoles and handhelds, I own about 20 Nintendo systems.</p>
-												<p>In the past couple years, though, my gaming interest has shifted to competitive Super Smash Bros, Melee specifically. I'm part of UMass Lowell's Super Smash Bros Melee Club, and had the chance to compete on our team in crew battles versus UNH and UMaine.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section> -->
-
-						<!-- Four -->
-							<section id="contact">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>I'm always open to talk if you have a reason to contact me! I can be reached via email at <a href="mailto:samueljchambers@outlook.com">samueljchambers@outlook.com</a>, or feel free to check out my <a href="https://www.linkedin.com/in/samueljchambers">LinkedIn profile</a>.</p>
-								</div>
-							</section>
-
-
-					</div>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; 2020 samchambers95.com. All rights reserved.</li>
-							</ul>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-			<script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-
-			<!-- Load Facebook SDK for JavaScript -->
-			<div id="fb-root"></div>
-			<script>
-				window.fbAsyncInit = function() {
-				FB.init({
-					xfbml            : true,
-					version          : 'v5.0'
-				});
-				};
-
-				(function(d, s, id) {
-				var js, fjs = d.getElementsByTagName(s)[0];
-				if (d.getElementById(id)) return;
-				js = d.createElement(s); js.id = id;
-				js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-				fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));
-			</script>
-
-			<!-- Your customer chat code -->
-			<div class="fb-customerchat"
-				attribution=setup_tool
-				page_id="120773505982921"
-				theme_color="#13cf13"
-				logged_in_greeting="Hi! How can I help you?"
-				logged_out_greeting="Hi! How can I help you?">
-			</div>
-
-	</body>
-
-	<div class="hover_bkgr_walk">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_15wl">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_15wc">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_30wl">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_30wc">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_60wl">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_60wc">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_sitting">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_30sl">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_30sc">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_onsl">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_onsc">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
-
-	<div class="hover_bkgr_training">
-		<span class="helper"></span>
-		<div>
-			<div class="popupCloseButton">X</div>
-			<p>Add any HTML content<br />inside the popup box!</p>
-		</div>
-	</div>
+    <!--- <div class="footer">
+        <h6>Copyright 2021 Sam Chambers</h6>
+    </div> --->
+ 
+</body>
 
 </html>
