--- a/index.html
+++ b/index.html
@@ -3,37 +3,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" 
-      type="image/png" 
-      href="favicon.ico">
-    <title>ECYFL</title>
+    <title>Sam's quickHUB</title>
 </head>
 <body>
     
     <!-- Profile picture-->
-    <img src="assets/logo.png" alt="profile picture" class="logo">
+    <!-- <img src="assets/logo.png" alt="profile picture" class="logo"> -->
 
-    <!-- Login link-->
-    <a class="login" href="https://www.leagueathletics.com/CPanel/Password.asp?org=ecyfl.org">Login</a></div>
+    
+    <!-- Login link -->
+    <!-- <a class="login" href="https://www.leagueathletics.com/CPanel/Password.asp?org=ecyfl.org">Login</a></div> -->
 
     <!-- Header text-->
-    <div class="header-text">Home</div>
+    <div class="header-text">quickHUB</div>
 
     <!-- Links-->
-        <a href="about.html" class="links">About</a>
-        <a href="registration.html" class="links">Registration</a>
-        <a href="http://www.ecyfl.org/Schedule.asp?org=ecyfl.org" class="links">Schedule</a>
-        <a href="https://www.google.com/maps/dir//Pingree+School,+537+Highland+St,+South+Hamilton,+MA+01982/@42.63862,-70.8831347,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x89e319ea68324409:0xd077c1afa71b2096!2m2!1d-70.880946!2d42.63862" class="links">Directions</a>
-        <a href="http://www.ecyfl.org/Page.asp?n=159444&org=ECYFL%2EORG" class="links">COVID-19</a>
-
-        <p><a href="https://www.facebook.com/ecyflfutsal" class="socials">Facebook</a></p>
-        <p><a href="https://www.instagram.com/ecyfl/" class="socials">Instagram</a></p>
-        <p><a href="https://ecyfl.org/" class="socials">ecyfl.org</a></p>
-
-    <div class="bottom-text">
-        <p>Contact us at</p>
-        <h3><a class="email" href="mailto:info@ecyfl.org">info@ecyfl.org</h3></a>
-    </div>
+    <h3>Music</h3>
+    <a href="https://music.youtube.com/playlist?list=PLoyo5VvGZb_ruirC3jJMDGuUGaAwqnZlM" class="links">Omegle Bars</a>
+    <a href="https://music.youtube.com/playlist?list=PLoyo5VvGZb_rlWrqKL3fHOdfxH-AfKfl1" class="links">Real Rap.</a>
+    <a href="https://music.youtube.com/playlist?list=PLoyo5VvGZb_qalfTppYYraKewCaOAxx0k" class="links">Throwbacks</a>
+    <h3>Drive</h3>
+    <a href="https://drive.google.com/drive/folders/10LZlhMzVda-4qSqUwe9b2W-Dq3Vsiv04" class="links">Music Folder</a>
+    <h3>YouTube</h3>
+    <a href="https://www.youtube.com/c/Techlore/videos" class="links">Techlore</a>
+    <a href="https://www.youtube.com/c/GGMelee/videos" class="links">GG Melee</a>
+    <a href="https://www.youtube.com/channel/UC59ZRYCHev_IqjUhremZ8Tg/videos" class="links">Harry Mack</a>
+    <h3>Shows</h3>
+    <a href="https://www.disneyplus.com/series/the-simpsons/3ZoBZ52QHb4x" class="links">The Simpsons</a>
+    <h3>Shows</h3>
+    <a href="https://www.hulu.com/series/brooklyn-nine-nine-daf48b7a-6cd7-4ef6-b639-a4811ec95232" class="links">Brooklyn 99</a>
 
     <!--- <div class="footer">
         <h6>Copyright 2021 Sam Chambers</h6>
