--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header text-->
     <div class="header-text">
         <h1>W10Setup</h1>
-        <p>A simple collection of links for various - mostly FOSS (Free and Open Source Software) - Windows programs.</p>
+        <h3>A simple collection of links for various - mostly FOSS (Free and Open Source Software) - Windows programs.</h3>
     </div>
 
     <!-- Links-->
@@ -102,9 +102,16 @@
         padding-top: 18px;
     }
 
+    h3 {
+        font-family: monospace;
+        font-size: 20px;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+
     p {
         font-family: monospace;
-        font-size: 12px;
+        font-size: 14px;
         padding-bottom: 20px;
     }
 
